; ModuleID = '/home/carl/AnghaBench/freebsd/sys/crypto/blake2/extr_blake2-sw.c_blake2b_xform_setkey.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/crypto/blake2/extr_blake2-sw.c_blake2b_xform_setkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blake2b_xform_ctx = type { i32, i32 }

@.str = private unnamed_addr constant [16 x i8] c"invalid klen %u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32)* @blake2b_xform_setkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @blake2b_xform_setkey(i8* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.blake2b_xform_ctx*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.blake2b_xform_ctx*
  store %struct.blake2b_xform_ctx* %9, %struct.blake2b_xform_ctx** %7, align 8
  %10 = load i32, i32* %6, align 4
  %11 = sext i32 %10 to i64
  %12 = icmp ugt i64 %11, 4
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @panic(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %14)
  br label %16

16:                                               ; preds = %13, %3
  %17 = load %struct.blake2b_xform_ctx*, %struct.blake2b_xform_ctx** %7, align 8
  %18 = getelementptr inbounds %struct.blake2b_xform_ctx, %struct.blake2b_xform_ctx* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @memcpy(i32 %19, i32* %20, i32 %21)
  %23 = load i32, i32* %6, align 4
  %24 = load %struct.blake2b_xform_ctx*, %struct.blake2b_xform_ctx** %7, align 8
  %25 = getelementptr inbounds %struct.blake2b_xform_ctx, %struct.blake2b_xform_ctx* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  ret void
}

declare dso_local i32 @panic(i8*, i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
